turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: ')' expected but ';' found.
                        else(droite();avance())
                                     ^LangtonsAnt:9: error: ';' expected but ')' found.
                        else(droite();avance())
                                              ^